data/derived/sp14/progs/unify/prog0450.ml.out
Characters 18-25:
  let _ = fixpoint (collatz, 48);;
                    ^^^^^^^
Error: This expression has type int -> int
       but an expression was expected of type
         int -> int -> ('a -> 'a * bool) * 'a
       Type int is not compatible with type int -> ('a -> 'a * bool) * 'a 
